fix: set about page video height to 230px on mobile

--- a/website/src/app/about/page.module.scss
+++ b/website/src/app/about/page.module.scss
@@ -2,10 +2,14 @@
 
 /* Video Hero */
 .about__video {
-  height: 100vh;
+  height: 230px;
   overflow: hidden;
   position: relative;
   width: 100%;
+
+  @media (min-width: $bp-md) {
+    height: 100vh;
+  }
 
   video {
     display: block;
